# calendario_backend

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 0001_create_auth_tables.py  0002_create_calendar_tables.py  0003_create_events_and_context_tables.py  0004_add_events_deleted_at.py  0005_add_mascot_name_to_users.py  0006_add_google_id_to_users.py  0007_add_weekly_intentions.py  0008_add_daily_tasks.py  0009_add_recurrence_to_events.py  0010_add_language_to_users.py  0011_add_email_verification.py  0012_add_performance_indexes.py  0013_add_layer_and_context_indexes.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: exceptions.py  security.py
app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/calendar/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/context/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/devices/: models.py  repository.py  router.py  (+2 more)
app/tasks/: __init__.py
app/workers/: calendar_sync.py
tests/: conftest.py  test_health.py
tests/auth/: test_auth.py
tests/calendar/: test_calendar.py
tests/context/: test_context.py
tests/events/: test_events.py
tests/integration/: test_auth_flow.py  test_calendar_sync.py  test_events_conflicts.py  test_patch_me.py  test_stats.py  test_timezones.py
tests/unit/: _db.py  test_auth_service.py  test_calendar_service.py  test_context_service.py  test_events_service.py  test_misc.py  test_stats_service.py  test_tasks_service.py
(+32 files in other folders)
